[package]
name = "rust101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.9.0-alpha.1" # Random number generators and other randomness functionality. 
# num_cpus = "1.16.0" # Get the number of CPUs on a machine.
